force-app/main/default/objects/Activity_Infestation__c/Activity_Infestation__c.object-meta.xml
<CustomObject>
    <label>Activity / Infestation</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Activity/Infestation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activities / Infestations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>