force-app/main/default/objects/Activity_Infestation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Activities / Infestations</relationshipLabel>
    <relationshipName>Activities_Infestations</relationshipName>
    <type>Lookup</type>
</CustomField>