force-app/main/default/objects/Activity_Infestation__c/fields/Active_Ingredient_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredient_Percentage__c</fullName>
    <formula>Product_Used__r.Active_Ingredient_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Ingredient %</label>
    <type>Text</type>
</CustomField>