force-app/main/default/objects/Activity_Infestation__c/fields/Active_Ingredients__c.field-meta.xml
<CustomField>
    <fullName>Active_Ingredients__c</fullName>
    <formula>TEXT(Product_Used__r.Active_Ingredients__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Ingredients</label>
    <type>Text</type>
</CustomField>