force-app/main/default/objects/Activity_Infestation__c/fields/Activity_Infestation_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Activity_Infestation_Created_Date_Time__c</fullName>
    <formula>DATETIMEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity/Infestation Created Date Time</label>
    <type>DateTime</type>
</CustomField>