force-app/main/default/objects/Activity_Infestation__c/fields/Activity_Level__c.field-meta.xml
<CustomField>
    <fullName>Activity_Level__c</fullName>
    <label>Activity Level</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Subtype__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>11-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 100%</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 25%</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 50%</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 75%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>