force-app/main/default/objects/Activity_Infestation__c/fields/Activity_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Activity_Quantity__c</fullName>
    <formula>IF(TEXT( Activity_Level__c )=&apos;Bait Consumption 100%&apos;, 1, 
 IF(TEXT( Activity_Level__c )=&apos;Bait Consumption 25%&apos;, 0.25, 
  IF(TEXT( Activity_Level__c )=&apos;Bait Consumption 50%&apos;, 0.5, 
   IF(TEXT( Activity_Level__c )=&apos;Bait Consumption 75%&apos;, 0.75, 
    IF((TEXT( Activity_Level__c )=&apos;No Activity&apos; || TEXT( Activity_Level__c )=&apos;0&apos;), 0, 
     IF(TEXT( Activity_Level__c )=&apos;Light&apos;, 5, 
      IF((TEXT( Activity_Level__c )=&apos;Medium&apos; || TEXT( Activity_Level__c )=&apos;11-50&apos;), 30, 
       IF((TEXT( Activity_Level__c )=&apos;Heavy&apos; || TEXT( Activity_Level__c )=&apos;51-100&apos;), 75, 
        IF(TEXT( Activity_Level__c )=&apos;1&apos;, 1, 
         IF(TEXT( Activity_Level__c )=&apos;2&apos;, 2, 
          IF(TEXT( Activity_Level__c )=&apos;3&apos;, 3, 
           IF(TEXT( Activity_Level__c )=&apos;4&apos;, 4, 
            IF(TEXT( Activity_Level__c )=&apos;5&apos;, 5, 
             IF(TEXT( Activity_Level__c )=&apos;6&apos;, 6, 
              IF(TEXT( Activity_Level__c )=&apos;7&apos;, 7, 
               IF(TEXT( Activity_Level__c )=&apos;8&apos;, 8, 
                IF(TEXT( Activity_Level__c )=&apos;9&apos;, 9, 
                 IF(TEXT( Activity_Level__c )=&apos;10&apos;, 10, 
                  IF(TEXT( Activity_Level__c )=&apos;&gt;100&apos;, 100, 0) 
                 ) 
                ) 
               ) 
              ) 
             ) 
            ) 
           ) 
          ) 
         ) 
        ) 
       )
      ) 
     ) 
    ) 
   ) 
  ) 
 ) 
)</formula>
    <label>Activity Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>