force-app/main/default/objects/Activity_Infestation__c/fields/Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Activity_Subtype__c</fullName>
    <label>Activity Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carpenter Ant</fullName>
            </value>
            <value>
                <fullName>Pavement Ant</fullName>
            </value>
            <value>
                <fullName>Citronella Ant</fullName>
            </value>
            <value>
                <fullName>Pharaoh Ant</fullName>
            </value>
            <value>
                <fullName>Crazy Ant</fullName>
            </value>
            <value>
                <fullName>Thief Ant</fullName>
            </value>
            <value>
                <fullName>Fire Ant</fullName>
            </value>
            <value>
                <fullName>Seagull</fullName>
            </value>
            <value>
                <fullName>Starling</fullName>
            </value>
            <value>
                <fullName>Sparrow</fullName>
            </value>
            <value>
                <fullName>Pigeon</fullName>
            </value>
            <value>
                <fullName>German Cockroach</fullName>
            </value>
            <value>
                <fullName>American Cockroach</fullName>
            </value>
            <value>
                <fullName>Smoky-Brown Cockroach</fullName>
            </value>
            <value>
                <fullName>Brown-Banded Cockroach</fullName>
            </value>
            <value>
                <fullName>Surinam Cockroach</fullName>
            </value>
            <value>
                <fullName>Oriental Cockroach</fullName>
            </value>
            <value>
                <fullName>Blow Fly</fullName>
            </value>
            <value>
                <fullName>Gnat</fullName>
            </value>
            <value>
                <fullName>Phorid Fly</fullName>
            </value>
            <value>
                <fullName>Bottle Fly</fullName>
            </value>
            <value>
                <fullName>House Fly</fullName>
            </value>
            <value>
                <fullName>Cluster Fly</fullName>
            </value>
            <value>
                <fullName>Midge</fullName>
            </value>
            <value>
                <fullName>Drain Fly</fullName>
            </value>
            <value>
                <fullName>Mosquito</fullName>
            </value>
            <value>
                <fullName>Fruit Fly</fullName>
            </value>
            <value>
                <fullName>Moth Fly</fullName>
            </value>
            <value>
                <fullName>Field Mouse</fullName>
            </value>
            <value>
                <fullName>House Mouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>