force-app/main/default/objects/Activity_Infestation__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ants</fullName>
            </value>
            <value>
                <fullName>Birds</fullName>
            </value>
            <value>
                <fullName>Biting and Stinging Insects</fullName>
            </value>
            <value>
                <fullName>Cockroaches</fullName>
            </value>
            <value>
                <fullName>Flies</fullName>
            </value>
            <value>
                <fullName>Occasional Invaders</fullName>
            </value>
            <value>
                <fullName>Rodents</fullName>
            </value>
            <value>
                <fullName>Stored Product Pests</fullName>
            </value>
            <value>
                <fullName>Wildlife</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>No Activity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>