force-app/main/default/objects/Activity_Infestation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Activities / Infestations</relationshipLabel>
    <relationshipName>Activities_Infestations</relationshipName>
    <type>Lookup</type>
</CustomField>