force-app/main/default/objects/Activity_Infestation__c/fields/Asset_Bar_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_Bar_Code__c</fullName>
    <label>Asset Bar Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>