force-app/main/default/objects/Activity_Infestation__c/fields/Chemical_Used__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Used__c</fullName>
    <formula>Product_Used__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chemical Used</label>
    <type>Text</type>
</CustomField>