force-app/main/default/objects/Activity_Infestation__c/fields/Chemical_Used_Summary__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Used_Summary__c</fullName>
    <formula>IF(!ISBLANK(Chemical_Used__c), &quot;Chemical: &quot; &amp; Chemical_Used__c &amp; BR(), &quot;&quot;) &amp; 
IF(!ISBLANK(Active_Ingredients__c), &quot;Active Ingredient: &quot; &amp; Active_Ingredients__c &amp; &quot; (&quot; &amp; Active_Ingredient_Percentage__c &amp; &quot;)&quot; &amp; BR(), &quot;&quot;) &amp; 
IF(!ISBLANK(P_C_P__c), &quot;PCP #: &quot; &amp; P_C_P__c &amp; BR(), &quot;&quot;) &amp; 
IF(!ISBLANK(Lot_Number__c), &quot;Lot #: &quot; &amp; Lot_Number__c, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chemical Used Summary</label>
    <type>Text</type>
</CustomField>