force-app/main/default/objects/Activity_Infestation__c/fields/Lot_Number_2nd__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number_2nd__c</fullName>
    <label>2nd Lot Number</label>
    <type>TextArea</type>
</CustomField>