force-app/main/default/objects/Activity_Infestation__c/fields/Lot_Number_3rd__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number_3rd__c</fullName>
    <label>3rd Lot Number</label>
    <type>TextArea</type>
</CustomField>