force-app/main/default/objects/Activity_Infestation__c/fields/OldActivity_Level__c.field-meta.xml
<CustomField>
    <fullName>OldActivity_Level__c</fullName>
    <label>OldActivity Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Activity</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>0-5</fullName>
            </value>
            <value>
                <fullName>6-50</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>&gt;100</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 25%</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 50%</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 75%</fullName>
            </value>
            <value>
                <fullName>Bait Consumption 100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>