force-app/main/default/objects/Activity_Infestation__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Activities / Infestations</relationshipLabel>
    <relationshipName>Activities_Infestations</relationshipName>
    <type>Lookup</type>
</CustomField>