force-app/main/default/objects/Activity_Infestation__c/fields/Other_Activity_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Other_Activity_Subtype__c</fullName>
    <inlineHelpText>If Activity Type is other, please mention the Species here.</inlineHelpText>
    <label>Other Activity Subtype</label>
    <length>25</length>
    <type>Text</type>
</CustomField>