force-app/main/default/objects/Activity_Infestation__c/fields/P_C_P__c.field-meta.xml
<CustomField>
    <fullName>P_C_P__c</fullName>
    <formula>Product_Used__r.P_C_P__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P.C.P. #</label>
    <type>Text</type>
</CustomField>