force-app/main/default/objects/Activity_Infestation__c/fields/Pest_Activity__c.field-meta.xml
<CustomField>
    <fullName>Pest_Activity__c</fullName>
    <formula>IF(ISBLANK(TEXT(Activity_Type__c)), &quot;&quot;,TEXT(Activity_Type__c) &amp; IF(ISBLANK(TEXT(Activity_Subtype__c)), &quot;&quot;, BR() &amp; &quot;--Sub Type: &quot; &amp;TEXT(Activity_Subtype__c) &amp; IF(ISBLANK(TEXT(Activity_Level__c)),&quot;&quot; ,BR() &amp; &quot;--Activity Level: &quot; &amp;TEXT(Activity_Level__c)  ) ) )</formula>
    <label>Pest Activity</label>
    <type>Text</type>
</CustomField>