force-app/main/default/objects/Activity_Infestation__c/fields/Preparation__c.field-meta.xml
<CustomField>
    <fullName>Preparation__c</fullName>
    <label>Preparation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>