force-app/main/default/objects/Activity_Infestation__c/fields/Product_Used_2nd__c.field-meta.xml
<CustomField>
    <fullName>Product_Used_2nd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Product Used</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activities / Infestations (2nd Product Used)</relationshipLabel>
    <relationshipName>Activities_Infestations2</relationshipName>
    <type>Lookup</type>
</CustomField>