force-app/main/default/objects/Activity_Infestation__c/fields/Product_Used__c.field-meta.xml
<CustomField>
    <fullName>Product_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Used</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Available_on_Log_Infestation__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Activities / Infestations</relationshipLabel>
    <relationshipName>Activities_Infestations</relationshipName>
    <type>Lookup</type>
</CustomField>