force-app/main/default/objects/Activity_Infestation__c/fields/Products_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Products_Treatment__c</fullName>
    <formula>IF(ISBLANK(Product_Used__c),TEXT(Treatment_Type__c),Product_Used__r.Name &amp; &quot;: &quot; &amp;TEXT(Quantity_Used__c)&amp; &quot; &quot; &amp;Unit_Of_Measure__c&amp; &quot;, &quot; &amp; TEXT( Treatment_Type__c) &amp; BR() &amp;
   IF(!ISBLANK(Chemical_Used__c), &quot;--Chemical: &quot; &amp; Product_Used__r.Description &amp; BR(),&quot;&quot; ) &amp; 
   IF(!ISBLANK(Active_Ingredients__c), &quot;--Active Ingredient: &quot; &amp; Active_Ingredients__c &amp; &quot; (&quot; &amp; Active_Ingredient_Percentage__c &amp; &quot;)&quot; &amp; BR(), &quot;&quot;) &amp;
   IF(!ISBLANK(P_C_P__c), &quot;--PCP #: &quot; &amp; P_C_P__c &amp; BR(), &quot;&quot;) &amp;
   IF(!ISBLANK(Lot_Number__c), &quot;--Lot #: &quot; &amp; Lot_Number__c, &quot;&quot;) ) &amp; 
 
IF(ISBLANK(Product_Used_2nd__c),&quot;&quot;, BR() &amp; BR() &amp; Product_Used_2nd__r.Name &amp; &quot;: &quot; &amp;TEXT(Quantity_used_2nd__c)&amp; &quot; &quot; &amp; TEXT(Product_Used_2nd__r.Unit_of_Measure_Consumed__c)&amp; &quot;, &quot; &amp; TEXT(Treatment_Type_2nd__c) &amp; BR() &amp; 
   IF(!ISBLANK(Product_Used_2nd__r.Description),&quot;--Chemical: &quot; &amp; Product_Used_2nd__r.Description &amp; BR() ,&quot;&quot;) &amp; 
   IF(!ISBLANK(TEXT(Product_Used_2nd__r.Active_Ingredients__c)), &quot;--Active Ingredient: &quot; &amp; TEXT(Product_Used_2nd__r.Active_Ingredients__c) &amp; &quot; (&quot; &amp; Product_Used_2nd__r.Active_Ingredient_percentage__c &amp; &quot;)&quot; &amp; BR(), &quot;&quot;) &amp;
   IF(!ISBLANK(Product_Used_2nd__r.P_C_P__c), &quot;--PCP #: &quot; &amp; Product_Used_2nd__r.P_C_P__c &amp; BR(), &quot;&quot;) &amp;
   IF(!ISBLANK(Lot_Number_2nd__c), &quot;--Lot #: &quot; &amp; Lot_Number_2nd__c, &quot;&quot;)) &amp;

IF(ISBLANK(Product_Used_3rd__c),&quot;&quot;, BR()&amp; BR()&amp; Product_Used_3rd__r.Name &amp; &quot;: &quot; &amp;TEXT(Quantity_Used_3rd__c)&amp; &quot; &quot; &amp; TEXT(Product_Used_3rd__r.Unit_of_Measure_Consumed__c)&amp; &quot;, &quot; &amp; TEXT(Treatment_Type_3rd__c) &amp; BR() &amp;
   IF(!ISBLANK(Product_Used_3rd__r.Description),&quot;--Chemical: &quot; &amp; Product_Used_3rd__r.Description &amp; BR() ,&quot;&quot;) &amp; 
   IF(!ISBLANK(TEXT(Product_Used_3rd__r.Active_Ingredients__c)), &quot;--Active Ingredient: &quot; &amp; TEXT(Product_Used_3rd__r.Active_Ingredients__c) &amp; &quot; (&quot; &amp; Product_Used_3rd__r.Active_Ingredient_percentage__c &amp; &quot;)&quot; &amp; BR(), &quot;&quot;) &amp;
   IF(!ISBLANK(Product_Used_3rd__r.P_C_P__c), &quot;--PCP #: &quot; &amp; Product_Used_3rd__r.P_C_P__c &amp; BR(), &quot;&quot;) &amp;
   IF(!ISBLANK(Lot_Number_3rd__c), &quot;--Lot #: &quot; &amp; Lot_Number_3rd__c, &quot;&quot;))</formula>
    <label>Quantity Applied &amp; Treatment Type</label>
    <type>Text</type>
</CustomField>