force-app/main/default/objects/Activity_Infestation__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <formula>IF (ISBLANK(Quantity_Used__c), &quot;0&quot; &amp; Unit_Of_Measure__c, TEXT(Quantity_Used__c) &amp; Unit_Of_Measure__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity</label>
    <type>Text</type>
</CustomField>