force-app/main/default/objects/Activity_Infestation__c/fields/Quantity_Used_3rd__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Used_3rd__c</fullName>
    <label>3rd Quantity Used</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>