force-app/main/default/objects/Activity_Infestation__c/fields/Sanitation__c.field-meta.xml
<CustomField>
    <fullName>Sanitation__c</fullName>
    <label>Sanitation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>