force-app/main/default/objects/Activity_Infestation__c/fields/Sanitation_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Sanitation_Preparation__c</fullName>
    <formula>IF(!ISPICKVAL(Sanitation__c,&apos;&apos;),&quot;Sanitation:&quot; &amp; TEXT(Sanitation__c)&amp; BR(), &quot;&quot;)  &amp;
IF(!ISPICKVAL(Preparation__c,&apos;&apos;),&quot;Preparation:&quot; &amp; TEXT(Preparation__c),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanitation &amp; Preparation</label>
    <type>Text</type>
</CustomField>