force-app/main/default/objects/Activity_Infestation__c/fields/Site_Survey__c.field-meta.xml
<CustomField>
    <fullName>Site_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Survey</label>
    <referenceTo>Site_Survey__c</referenceTo>
    <relationshipLabel>Activities / Infestations</relationshipLabel>
    <relationshipName>Activities_Infestations</relationshipName>
    <type>Lookup</type>
</CustomField>