force-app/main/default/objects/Activity_Infestation__c/fields/Survey_Asset_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Asset_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Asset Location</label>
    <referenceTo>Survey_Asset_Location__c</referenceTo>
    <relationshipLabel>Activities / Infestations</relationshipLabel>
    <relationshipName>Activities_Infestations</relationshipName>
    <type>Lookup</type>
</CustomField>