force-app/main/default/objects/Activity_Infestation__c/fields/Treatment_Type_2nd__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type_2nd__c</fullName>
    <label>2nd Treatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pest_Treatment_Type</valueSetName>
    </valueSet>
</CustomField>