force-app/main/default/objects/Activity_Infestation__c/fields/Treatment_Type_3rd__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type_3rd__c</fullName>
    <label>3rd Treatment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pest_Treatment_Type</valueSetName>
    </valueSet>
</CustomField>