force-app/main/default/objects/Activity_Infestation__c/fields/Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_Of_Measure__c</fullName>
    <formula>TEXT(Product_Used__r.Unit_of_Measure_Consumed__c)</formula>
    <label>Unit Of Measure</label>
    <type>Text</type>
</CustomField>