force-app/main/default/objects/Activity_Infestation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Asset__c</columns>
    <columns>Asset_Bar_Code__c</columns>
    <columns>OldActivity_Level__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Activity_Subtype__c</columns>
    <columns>Work_Order__c</columns>
    <columns>Work_Order_Room__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>